# BDML

./: README.md
HW1/: NCKUcalculator.py  README.md  homework.txt  output.csv  pyproject.toml  requirements.txt  trader.py
